--- a/Appointment-Scheduler/src/main/webapp/css/style-02.css
+++ b/Appointment-Scheduler/src/main/webapp/css/style-02.css
@@ -253,6 +253,11 @@
   width: 70%;
   padding: 15px;
 }
+.column-3 {
+  float: left;
+  width: 100%;
+  padding: 15px;
+}
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -265,10 +270,11 @@
 
 .container {
   padding: 2px 16px;
+  background-color: transparent;
 }
 .cards-container{
 	padding: 2px 16px;
-	background-color: #E4E9F7;
+	background-color: rgb(242, 244, 251);
 /*	 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);*/
 }
 .right-column{
@@ -282,3 +288,84 @@
     display: none;
   }
 }
+
+
+/*=========================table styles============================*/
+
+.table-container {
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.header {
+  font-size: 26px;
+  margin: 20px 0;
+  text-align: center;
+  
+}
+.header small {
+    font-size: 0.5em;
+  }
+
+.responsive-table 
+  li {
+    border-radius: 3px;
+    padding: 15px 20px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+  }
+ .responsive-table  .table-header {
+    background-color: #1d1b31;
+    font-size: 14px;
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 0.03em;
+  }
+ .responsive-table  .table-row {
+    background-color: #ffffff;
+    box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+  }
+ .responsive-table  .col-1 {
+    flex-basis: 30%;
+  }
+ .responsive-table  .col-2 {
+    flex-basis: 30%;
+  }
+ .responsive-table  .col-3 {
+    flex-basis: 30%;
+  }
+ .responsive-table  .col-4 {
+    flex-basis: 10%;
+  }
+  
+  @media all and (max-width: 767px) {
+  .responsive-table   .table-header {
+      display: none;
+    }
+  .responsive-table   .table-row{
+      
+    }
+    li {
+      display: block;
+    }
+   .responsive-table  .col {
+      
+      flex-basis: 100%;
+      
+    }
+  .responsive-table   .col {
+      display: flex;
+      padding: 10px 0;
+      &:before {
+        color: #6C7A89;
+        padding-right: 10px;
+        content: attr(data-label);
+        flex-basis: 50%;
+        text-align: right;
+      }
+    }
+  }
