--- a/Appointment-Scheduler/src/main/webapp/css/style-02.css
+++ b/Appointment-Scheduler/src/main/webapp/css/style-02.css
@@ -293,7 +293,7 @@
 /*=========================table styles============================*/
 
 .table-container {
-  max-width: 1000px;
+  max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 10px;
@@ -330,15 +330,21 @@
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
   }
  .responsive-table  .col-1 {
-    flex-basis: 30%;
+    flex-basis: 20%;
   }
  .responsive-table  .col-2 {
     flex-basis: 30%;
   }
  .responsive-table  .col-3 {
-    flex-basis: 30%;
+    flex-basis: 20%;
   }
  .responsive-table  .col-4 {
+    flex-basis: 20%;
+  }
+  .responsive-table  .col-5 {
+    flex-basis: 20%;
+  }
+  .responsive-table  .col-6 {
     flex-basis: 10%;
   }
   
@@ -368,4 +374,47 @@
         text-align: right;
       }
     }
+  }
+  
+  .book-button{
+	  padding: 5px 10px;
+	  background-color: rgb(0, 128, 128);
+	  border: none;
+	  color: white;
+	  border-radius: 5px;
+  }
+  .book-button:hover{
+	  background-color:white;
+	  border: 2px solid  rgb(0, 128, 128);
+	  color: rgb(0, 128, 128);
+	  border-radius: 5px;
+	  cursor: pointer;
+  }
+  .add-button{
+	  margin: 15px 15px;
+	  float: right;
+	  padding: 5px 10px;
+	  border-radius: 5px;
+	  border: none;
+	  background-color: rgb(0, 128, 128);
+	  color: white;
+  }
+  .add-button:hover{
+	  border: 2px solid  rgb(0, 128, 128);
+	  color:rgb(0, 128, 128);
+	  cursor: pointer;
+	  background-color:white;
+  }
+.delete-button{
+	  padding: 5px 10px;
+	  border-radius: 5px;
+	  border: none;
+	  background-color: rgb(255, 0, 0);
+	  color: white;
+  }
+  .delete-button:hover{
+	  border: 2px solid  rgb(255, 0, 0);
+	  background-color:white;
+	  color: red;
+	  cursor: pointer;
   }
