--- a/Appointment-Scheduler/src/main/webapp/css/style-02.css
+++ b/Appointment-Scheduler/src/main/webapp/css/style-02.css
@@ -258,14 +258,36 @@
   width: 100%;
   padding: 15px;
 }
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+
+.card-1{
+	padding-top: 20px;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 100%;
+  height:100px;
+  background-color: rgb(0, 128, 192);
+}
+.card-2{
+	padding-top: 20px;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 100%;
+  height:100px;
+  background-color: rgb(255, 0, 128);
 }
 
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+.card-3{
+	padding-top: 20px;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 100%;
+  height:100px;
+  background-color: rgb(0, 128, 128);
+}
+
+
+.card-1:hover, .card-2:hover, .card-3:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3);
 }
 
 .container {
@@ -274,9 +296,10 @@
 }
 .cards-container{
 	padding: 2px 16px;
-	background-color: rgb(242, 244, 251);
+	background-color:transparent;
 /*	 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);*/
 }
+
 .right-column{
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
